--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@stellar/stellar-sdk": "^14.2.0",
     "@stellar/stellar-xdr-json": "^23.0.0",
     "@tanstack/react-query": "^5.90.2",
+    "bignumber.js": "^9.3.1",
+    "lodash": "^4.17.21",
     "lossless-json": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -30,7 +32,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
-    "@types/lodash": "^4.17.20",
+    "@types/lodash": "^4.17.21",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@types/react-router-dom": "^5.3.3",
